Removed the max-width from the intermediate size rule for image-gallery-gallery to avoid weird jumps if the desktop browser width is in between the usual mobile breakpoints

--- a/jetstream/static/jetstream/css/blocks/image-gallery-gallery.less
+++ b/jetstream/static/jetstream/css/blocks/image-gallery-gallery.less
@@ -14,8 +14,7 @@
   }
 }
 
-@media (min-width: @screen-phone)
-        and (max-width: @screen-tablet) {
+@media (min-width: @screen-phone) {
   .image-gallery-gallery {
     // This rule is restricted because we don't want them floating on phones, and Bootstrap floats them on desktop.
     .gallery-item {
